# Astra-Client-15.24

./: .gitignore  CMakeLists.txt  CMakePresets.json  UPGRADE_15.24_ANALISE.md  compile.ps1  debug-attach.ps1  finalchk.sh  iditem.sh  init.lua  run_cdb.cmd  simserver.py  test_login.ps1  vcpkg.json
data/: default-config.otml
data/fonts/: Verdana Bold-11px-low-space.otfont  Verdana-8px-badge.otfont
data/shaders/: outfit_black_fragment.frag
data/styles/: 30-messageboxes.otui
docs/: DISTRIBUICAO_E_UPDATER.md  OTIMIZACOES_FPS.md  RELATORIO_SESSAO_DISTRIBUICAO.md  SKILLS_COMBAT_STATS.md
mods/client_settings/: settings.lua
mods/client_settings/classes/: ScreenShot.lua  TempOptions.lua  conditions.lua  dataset.lua
mods/client_settings/options/: actionsBars.otui
mods/game_analyser/: analyser.lua
mods/game_analyser/classes/: DropTrackerAnalyser.lua  HuntingAnalyser.lua  MiscAnalyzer.lua  XPAanalyser.lua
mods/game_cyclopedia/: cyclopedia.lua  cyclopediaprotocol.lua
mods/game_cyclopedia/classes/: bestiary.lua  boss_slots.lua  bosstiary.lua  character.lua  charms.lua  house.lua  items.lua  map.lua  titles.lua
mods/game_cyclopedia/styles/: bestiary.otui  character.otui
mods/game_dailyreward/: dailyreward.lua  dailyreward.otmod  dailyrewardprotocol.lua
mods/game_forge/: forge.lua
mods/game_forge/classes/: Forge.lua
mods/game_helper/: SCRIPTING_API.md  cavebot.lua  helper.lua  helper.otmod  scripting.lua
mods/game_helper/styles/: cavebot.otui  helper.otui  scripting.otui
mods/game_highscores/: highscores.lua  highscores.otmod  highscoresprotocol.lua
mods/game_party_list/: partyClass.lua  partyList.lua  partyList.otui
mods/game_proficiency/: proficiency.lua  weapon_proficiency.otui
mods/game_stash/: stash.lua
mods/game_store/: store.lua  store.otui  storeprotocol.lua
mods/game_store/classes/: Categories.lua  Offers.lua  Store.lua
mods/game_store/styles/: buttons.otui  offers.otui
mods/game_tibia_imbui/: t_imbui.otui
mods/game_tibia_imbui/classes/: imbuementitem.lua
mods/game_trackers/: game_trackers.lua
mods/game_trackers/classes/: bestiary_tracker.lua  boss_tracker.lua  imbuement_tracker.lua
modules/client_background/: background.lua
modules/client_entergame/: characterlist.lua  entergame.lua  entergame.otui
modules/client_entergame/classes/: login.lua
modules/client_stats/: stats.lua  stats.otui
modules/client_styles/: styles.lua
modules/client_terminal/: terminal.lua  terminal.otui
modules/corelib/: globals.lua  http.lua  keyboard.lua  util.lua
modules/corelib/ui/: uiprogressbar.lua  uiprogressbarsd.lua  uiprogressbarsdinverted.lua  uiverticalprogressbarsd.lua  uiverticalprogressbarsdinv.lua
modules/crash_reporter/: crash_reporter.lua
modules/game_actionbar/: actionbar.lua
modules/game_battle/: battle.lua
modules/game_console/classes/: Message.lua
modules/game_containers/: containers.lua
modules/game_features/: features.lua
modules/game_interface/: gameinterface.lua
modules/game_npctrade/: npctrade.lua
modules/game_offsets/: offsets.lua
modules/game_outfit/: outfit.lua
modules/game_protocol/: protocol.lua
modules/game_sidebuttons/: sidebuttons.lua  sidebuttons.otui
modules/game_skills/: skills.lua
modules/game_things/: things.lua
modules/game_topbar/: topbar.lua
modules/game_unjustifiedpoints/: unjustifiedpoints.lua  unjustifiedpoints.otui
modules/game_walking/: walking.lua
modules/gamelib/: const.lua  creature.lua  game.lua  item.lua  player.lua  protocolgame.lua  util.lua
modules/gamelib/core/: realmap.lua
modules/gamelib/ui/: uicreaturebutton.lua  uiitem.lua  uirealminimap.lua
src/: main.cpp
src/client/: CMakeLists.txt  animator.h  appearancesloader.cpp  appearancesloader.h  const.h  creature.cpp  creatures.cpp  creatures.h  effect.cpp  game.cpp  game.h  item.cpp  item.h  localplayer.cpp  localplayer.h  luafunctions_client.cpp  luavaluecasts_client.cpp  luavaluecasts_client.h  map.cpp  map.h  mapview.cpp  mapview.h  missile.cpp  outfit.cpp  protocolcodes.cpp  protocolcodes.h  protocolgame.cpp  protocolgame.h  protocolgameparse.cpp  protocolgamesend.cpp  spritemanager.cpp  spritemanager.h  spritesheetloader.cpp  spritesheetloader.h  statictext.cpp  thing.h  thingtype.cpp  thingtype.h  thingtypemanager.cpp  thingtypemanager.h  (+5 more)
src/client/proto/: appearances.proto  staticdata.proto
src/framework/: luafunctions.cpp  pch.h
src/framework/core/: application.cpp  application.h  graphicalapplication.cpp  graphicalapplication.h  logger.cpp  resourcemanager.cpp  resourcemanager.h
src/framework/graphics/: atlas.cpp  bitmapfont.cpp  bitmapfont.h  drawqueue.cpp  drawqueue.h  fontmanager.cpp  fontmanager.h  graphics.cpp  image.cpp  textrender.cpp  textrender.h
src/framework/http/: http.cpp  session.cpp  websocket.cpp
src/framework/input/: mouse.cpp  mouse.h
src/framework/luaengine/: luavaluecasts.h
src/framework/net/: connection.cpp  connection.h  inputmessage.cpp  outputmessage.cpp  outputmessage.h  protocol.cpp  protocol.h
src/framework/platform/: win32window.cpp
src/framework/proxy/: proxy_client.cpp
src/framework/ui/: uitextedit.cpp  uiwidgetbasestyle.cpp  uiwidgetimage.cpp  uiwidgettext.cpp
src/framework/util/: crypt.cpp  crypt.h
tools/: gen_asset_key.py  gen_update_manifest.py  make_release.ps1  symbolicate_crash.ps1  update_server_reference.py
tools/installer/: koliseuot.iss
tools/sign/: README.md
vc17/: otclient.vcxproj
